<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/bglayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/main_bg"
                android:orientation="vertical"
                android:paddingBottom="30dp">



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:textStyle="bold" />



                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btnOpenServerList"
                    android:layout_width="280dp"
                    android:layout_height="46dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/white_rounded_bg"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/flag_image"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_baseline_location_on_24" />

                    <TextView
                        android:id="@+id/flag_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="Select Country"
                        android:textColor="@color/white"
                        android:textSize="17dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/flag_image"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_conversion_absoluteHeight="23dp"
                        tools:layout_conversion_absoluteWidth="112dp" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:tint="@color/white"
                        android:src="@drawable/ic_drop_down"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>



                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btnConnect"
                    android:layout_width="190dp"
                    android:layout_height="190dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp">

                    <View
                        android:id="@+id/view3"
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:background="@drawable/connect_btn3"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/view2"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:background="@drawable/connect_btn2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:background="@drawable/connect_btn1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_timer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="17dp"
                        android:gravity="center"
                        android:hint="00:00:00"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:visibility="invisible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/connect_btn"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/ic_baseline_power_settings_new_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/connect_btn2"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/ic_baseline_power_settings_new_24"
                        android:visibility="invisible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_timer" />


                </androidx.constraintlayout.widget.ConstraintLayout>



                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_marginEnd="150dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/tvConnectionStatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/disconnected"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:visibility="gone"
                            android:layout_marginTop="4dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/animation_view"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/animation_view"
                            android:layout_width="50dp"
                            android:layout_height="0dp"
                            android:visibility="gone"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/main_load" />

                        <TextView
                            android:id="@+id/connection_state_off"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/ic_baseline_signal_cellular_alt_24_off"
                            android:drawablePadding="5dp"
                            android:gravity="bottom"
                            android:text="@string/disconnected"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:visibility="visible"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/connection_state_on"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/ic_baseline_signal_cellular_alt_24"
                            android:drawablePadding="5dp"
                            android:gravity="bottom"
                            android:text="@string/connected"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:visibility="gone"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>







                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/_18sdp"
                android:text="Ads Can Place Here"/>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="15dp"
                android:visibility="gone"
                android:paddingHorizontal="10dp">

                <com.facebook.ads.NativeAdLayout
                    android:id="@+id/native_ad_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:visibility="gone" />

                <RelativeLayout
                    android:id="@+id/fl_adplaceholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@null"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>